# GenAI-Manipulate

./: .gitignore  .gitmodules  README.md  Screencast from 08-11-2024 11_38_17 PM.webm
new_ros2_ws/: cloudvision_tester.py
src/franka_description/robots/: camera.xacro
src/robotic_arms_control/: CMakeLists.txt  package.xml  setup.py
src/robotic_arms_control/action/: Attacher.action
src/robotic_arms_control/launch/: gazebo_bringup.launch.py  rviz_bringup.launch.py
src/robotic_arms_control/robotic_arms_control/: block_solver.py  box_pick_and_place.py  camera.py  camera_depth.py  forward_kinematics.py  joint_controller_test.py  jtc_multi_goals.py  pipeline.py  rt2  rtb_ikine_fkine.py  shape_trajectory_prompt.py  spawn_object.py  teleop.py  trajectory.py  visiontoapi3.py  visiontoopenai.py  visiontoopenai2.py  xyzsolver.py  xyzsolver2.py
src/robotic_arms_control/robotic_arms_control/templates/: index.html
src/robotic_arms_control/urdf/: bazu.urdf  blue_box.urdf  box.urdf  panda_arm.urdf
src/robotic_arms_control/worlds/: custom_world.world  custom_world2.world
